# A-DS_remote

./: .gitignore  CMakeLists.txt
Lab1/: 1_1_char_array.cpp  1_1_char_list.cpp  1_2_bit_array.cpp  1_2_byte_array.cpp  1_2_machine_word.cpp  CMakeLists.txt
Lab1_2/: task.txt
Lab1_2/src/: CMakeLists.txt  empty.cpp  screen.h  shape.cpp  shape.h
Lab1_2/tests/: CMakeLists.txt  main.cpp
Lab2/: CMakeLists.txt  CharArraySet.h  CharListSet.cpp
Lab2/src/: CMakeLists.txt
Lab2/src/modules/: BitArraySet.cpp  BitArraySet.h  CharArraySet.cpp  CharArraySet.h  CharListSet.cpp  CharListSet.h  MachineWordSet.cpp  MachineWordSet.h
Lab2/src/modules/utils/: generator.h
Lab2/tests/: CMakeLists.txt  main_lab2.cpp
Lab3/src/: CMakeLists.txt  Node.cpp  Node.h  Tree.cpp  Tree.h
Lab3/tests/: main.cpp
cmake/: clang-cxx-dev-tools.cmake  message_macros.cmake
sem1/Lab1/: 1_1_char_list.cpp  CMakeLists.txt
sem1/Lab1/utils/: utils.h
sem1/Lab2/src/modules/: BitArraySet.h  CharArraySet.cpp  CharArraySet.h  CharListSet.h  MachineWordSet.cpp  MachineWordSet.h
sem1/Lab2/tests/: main_lab2.cpp
sem1/Lab3/src/: CMakeLists.txt  Node.h  Queue.h  Tree.h
sem1/Lab3/tests/: CMakeLists.txt  main.cpp  test.cpp
sem2/Lab1_2/: task.txt  task_2.txt
sem2/Lab1_2/src/: CMakeLists.txt  CustomExceptions.h  ErrorSign.h  MyExceptions.h  ResourceException.h  screen.h  shape.h
sem2/Lab1_2/tests/: main.cpp
sem2/Lab3/src/: CMakeLists.txt  MyBinarySearchTree.cpp  MyBinarySearchTree.h  WeightedTree.cpp  WeightedTree.h
sem2/Lab3/tests/: CMakeLists.txt  in.txt  main.cpp  time_measurement.cpp
(+1 files in other folders)
